switch to use the URI class in order to catch URL formatting errors